--- a/WeatherMonitor.uvprojx
+++ b/WeatherMonitor.uvprojx
@@ -337,7 +337,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls>--c99</MiscControls>
-              <Define>rvmdk PART_TM4c123GH6PM PART_TM4C123GH6PM</Define>
+              <Define>rvmdk PART_TM4C123GH6PM</Define>
               <Undefine></Undefine>
               <IncludePath>C:\ti\TivaWare_C_Series-2.1.4.178</IncludePath>
             </VariousControls>
